# BSc-projekt-Program-za-Pozicioniranje-Sekvenci-na-Referentni-Genom

./: .gitmodules  CMakeCache.txt  LICENSE  Makefile  README.md  cmake_install.cmake  mapper
sekvence_mapper/: CMakeLists.txt  mapper.cpp
sekvence_mapper/src/: CMakeLists.txt  alignment.cpp  alignment.h  minimizers.cpp  minimizers.h
sekvence_mapper/tests/: alignment_tests.cpp
src/: Makefile  cmake_install.cmake
src/bioparser/: Makefile  cmake_install.cmake
